--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat' , sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,7 +8,7 @@
 
 body {
     padding: 20px;
-    background-color: #c2deff;
+    background-image: linear-gradient(#4187c0, #d6e9ff);
 }
 
 .container {
